# Genetik

./: CMakeLists.txt  LICENSE  README.md  demo.cpp  main.cpp
genetik/: CMakeLists.txt  Chromosome.cpp  Chromosome.hpp  Chromosome_i.hpp  Creature.cpp  Creature.hpp  Creature_i.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  GeneticAlgorithm_i.hpp  Population.cpp  Population.hpp  Population_i.cpp  Population_i.hpp  Settings.hpp
tests/: CMakeLists.txt  tests.cpp
